# Cmake-Language

./: README.md
CMakeHelloworld/: .helloworld.cmake.swo  .helloworld.cmake.swp  helloworld.cmake
GenerateExpressions/: CmakeLists.txt  mylib.h
Helloworld/: CMakeLists.txt
ModernLibrary/: CmakeLists.txt
ModernLibrary/mybin/: Cmakelists.txt  helloworld.cpp
ModernLibrary/mylib/: CMakeLists.txt
ModernLibrary/mylib/src/: mylib.cpp
ModernLibrary/mylib/src/impl/: mylib_impl.cpp  mylib_impl.h
SampleLibrary/: CMakeLists.txt  hellolib.cpp  helloworld.cpp
Testing/: CMakeLists.txt  failing.cpp  passing.cpp
